--- a/frontend-student-portal/src/assets/main.css
+++ b/frontend-student-portal/src/assets/main.css
@@ -5,4 +5,15 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Nunito', sans-serif;
 }
+
+h1, h2, h3 {
+    font-family: 'Roboto Slab', serif;
+  }
+  
+p {
+    font-family: 'Rubik', sans-serif;
+    line-height: 1.5;
+  }
+  
